updated rampart version to 1.6.1.wso2v21-SNAPSHOT

--- a/modules/samples/sts/sts-client/pom.xml
+++ b/modules/samples/sts/sts-client/pom.xml
@@ -51,7 +51,7 @@
             <artifactId>rampart-policy</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.rampart</groupId>
+            <groupId>org.apache.rampart.wso2</groupId>
             <artifactId>rampart-trust</artifactId>
         </dependency>
         <dependency>
