--- a/pom.xml
+++ b/pom.xml
@@ -698,11 +698,6 @@
                 <version>${wss4j.wso2.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.rampart</groupId>
-                <artifactId>rampart-trust</artifactId>
-                <version>${rampart.wso2.version.1}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.apache.httpcomponents.wso2</groupId>
                 <artifactId>httpcore</artifactId>
                 <version>${httpcore.wso2.version}</version>
@@ -1186,8 +1181,8 @@
         <charon.version>2.0.5</charon.version>
         <xalan.version>2.7.1</xalan.version>
         <xalan.wso2.version>2.7.0.wso2v1</xalan.wso2.version>
-        <rampart.wso2.version>1.6.1.wso2v20</rampart.wso2.version>
-        <rampart.wso2.version.1>1.6.1-wso2v20</rampart.wso2.version.1>
+        <rampart.wso2.version>1.6.1.wso2v21-SNAPSHOT</rampart.wso2.version>
+        <rampart.wso2.version.1>1.6.1-wso2v21-SNAPSHOT</rampart.wso2.version.1>
         <orbit.version.commons.httpclient>4.2.5.wso2v1</orbit.version.commons.httpclient>
         <commons.httpclient.version>3.1</commons.httpclient.version>
         <httpcore.wso2.version>4.3.3.wso2v1</httpcore.wso2.version>
