--- a/modules/samples/sso/SSOAgentSample/pom.xml
+++ b/modules/samples/sso/SSOAgentSample/pom.xml
@@ -50,6 +50,10 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.wso2.orbit.joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.ws.commons.axiom</groupId>
             <artifactId>axiom-api</artifactId>
         </dependency>
