Updating repo versions relevant for IS 5.3.0 M3

--- a/pom.xml
+++ b/pom.xml
@@ -670,7 +670,7 @@
             <dependency>
                 <groupId>org.wso2.carbon.identity</groupId>
                 <artifactId>org.wso2.carbon.identity.sso.agent</artifactId>
-                <version>${carbon.identity.extension.version}</version>
+                <version>${carbon.identity.agent.sso.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.wso2.orbit.org.apache.neethi</groupId>
@@ -1186,20 +1186,41 @@
     </profiles>
 
     <properties>
-        <carbon.identity.version>5.5.0-SNAPSHOT</carbon.identity.version>
+        <carbon.identity.version>5.5.0-m3</carbon.identity.version>
         <carbon.identity.governance.version>1.0.0-SNAPSHOT</carbon.identity.governance.version>
         <carbon.identity.event.handler.account.lock.version>
             1.0.0-SNAPSHOT</carbon.identity.event.handler.account.lock.version>
-        <carbon.identity.event.handler.email.version>1.0.0-SNAPSHOT</carbon.identity.event.handler.email.version>
+        <carbon.identity.event.handler.email.version>1.0.0-m2</carbon.identity.event.handler.email.version>
         <carbon.identity.inbound.auth.openid.version>5.1.1-SNAPSHOT</carbon.identity.inbound.auth.openid.version>
-        <carbon.identity.user.workflow.version>5.1.1-SNAPSHOT</carbon.identity.user.workflow.version>
+        <carbon.identity.user.workflow.version>5.1.1-m2</carbon.identity.user.workflow.version>
         <carbon.identity.inbound.auth.saml.version>5.1.1-SNAPSHOT</carbon.identity.inbound.auth.saml.version>
         <carbon.identity.inbound.auth.sts.version>5.1.1-SNAPSHOT</carbon.identity.inbound.auth.sts.version>
-        <carbon.identity.outbound.auth.requestpath.basicauth.version>5.1.1-SNAPSHOT
+
+        <carbon.identity.agent.sso.version>5.1.1-SNAPSHOT
+        </carbon.identity.agent.sso.version>
+        <carbon.identity.tool.samlsso.validator.version>5.1.1-SNAPSHOT
+        </carbon.identity.tool.samlsso.validator.version>
+        <carbon.identity.outbound.auth.passive.sts.version>5.1.1-SNAPSHOT
+        </carbon.identity.outbound.auth.passive.sts.version>
+        <carbon.identity.outbound.auth.samlsso.version>5.1.1-SNAPSHOT
+        </carbon.identity.outbound.auth.samlsso.version>
+        <carbon.identity.carbon.auth.saml2.version>5.1.1-SNAPSHOT
+        </carbon.identity.carbon.auth.saml2.version>
+
+        <carbon.identity.carbon.auth.signedjwt.version>5.1.1-SNAPSHOT
+        </carbon.identity.carbon.auth.signedjwt.version>
+        <carbon.identity.agent.entitlement.proxy.version>5.1.1-SNAPSHOT
+        </carbon.identity.agent.entitlement.proxy.version>
+        <carbon.identity.agent.entitlement.filter.version>5.1.1-SNAPSHOT
+        </carbon.identity.agent.entitlement.filter.version>
+
+        <carbon.identity.outbound.auth.requestpath.basicauth.version>5.1.1-m1
         </carbon.identity.outbound.auth.requestpath.basicauth.version>
-        <carbon.identity.local.auth.iwa.version>5.2.0-SNAPSHOT</carbon.identity.local.auth.iwa.version>
+        <carbon.identity.local.auth.basicauth.version>5.1.1-SNAPSHOT</carbon.identity.local.auth.basicauth.version>
+        <carbon.identity.local.auth.fido.version>5.1.1-SNAPSHOT</carbon.identity.local.auth.fido.version>
+        <carbon.identity.local.auth.iwa.version>5.2.0-m1</carbon.identity.local.auth.iwa.version>
         <carbon.identity.inbound.auth.oauth.version>5.2.0-SNAPSHOT</carbon.identity.inbound.auth.oauth.version>
-        <carbon.identity.extension.version>5.1.1-SNAPSHOT</carbon.identity.extension.version>
+        <carbon.identity.extension.version>5.1.0</carbon.identity.extension.version>
         <product.identity.version>5.3.0-SNAPSHOT</product.identity.version>
         <bcprov.jdk13.version>140</bcprov.jdk13.version>
         <bcprov.jdk15.version>132</bcprov.jdk15.version>
@@ -1214,13 +1235,13 @@
         <opensaml2.wso2.version>2.6.4.wso2v3</opensaml2.wso2.version>
         <joda.version>2.8.2</joda.version>
         <joda.wso2.version>2.8.2.wso2v1</joda.wso2.version>
-        <wss4j.wso2.version>1.5.11.wso2v14-SNAPSHOT</wss4j.wso2.version>
+        <wss4j.wso2.version>1.5.11.wso2v13</wss4j.wso2.version>
         <openws.version>1.4.1</openws.version>
         <charon.version>2.0.5</charon.version>
         <xalan.version>2.7.1</xalan.version>
         <xalan.wso2.version>2.7.0.wso2v1</xalan.wso2.version>
-        <rampart.wso2.version>1.6.1.wso2v21-SNAPSHOT</rampart.wso2.version>
-        <rampart.wso2.version.1>1.6.1-wso2v21-SNAPSHOT</rampart.wso2.version.1>
+        <rampart.wso2.version>1.6.1.wso2v20</rampart.wso2.version>
+        <rampart.wso2.version.1>1.6.1-wso2v20</rampart.wso2.version.1>
         <orbit.version.commons.httpclient>4.2.5.wso2v1</orbit.version.commons.httpclient>
         <commons.httpclient.version>3.1</commons.httpclient.version>
         <httpcore.wso2.version>4.3.3.wso2v1</httpcore.wso2.version>
@@ -1311,7 +1332,8 @@
         <commons.codec.version>1.8</commons.codec.version>
         <XmlSchema.version>1.4.7.wso2v3</XmlSchema.version>
         <wsdl4j.version>1.6.2.wso2v2</wsdl4j.version>
-        <carbon.identity.authen.data.publisher.version>5.1.1-SNAPSHOT</carbon.identity.authen.data.publisher.version>
+        <carbon.identity.data.publisher.authentication.version>5.1.1-SNAPSHOT
+        </carbon.identity.data.publisher.authentication.version>
     </properties>
 
     <repositories>
