Packed the authenticators - x509, office365, smsotp, emailotp and twitter

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>modules/migration/migration-5.0.0_to_5.1.0/wso2-is-migration-client</module>
         <module>modules/features</module>
         <module>modules/p2-profile-gen</module>
+        <module>modules/connectors</module>
         <module>modules/distribution</module>
         <module>modules/styles</module>
         <module>modules/samples</module>
